--- a/.gitlab/deps_build.yml
+++ b/.gitlab/deps_build.yml
@@ -30,10 +30,16 @@
       -DLLVM_PARALLEL_COMPILE_JOBS=4 \
       -DLLVM_PARALLEL_LINK_JOBS=4 \
       ../llvm
+    - cp $SRC_PATH/pkg/ebpf/c/wrapper.h include/
+    - cp $SRC_PATH/pkg/ebpf/c/wrapper.cpp ../llvm/lib/CodeGen/
+    - patch -ruN include/llvm/Config/llvm-config.h < $SRC_PATH/pkg/ebpf/c/llvm_config.patch
+    - patch -ruN ../llvm/lib/CodeGen/CMakeLists.txt < $SRC_PATH/pkg/ebpf/c/cmakelists.patch
+    - export CMAKE_EXE_LINKER_FLAGS="-Wl,--wrap=exp -Wl,--wrap=log -Wl,--wrap=pow -Wl,--wrap=log2 -Wl,--wrap=log2f"
     - cmake --build . --target install
     - mv $DATADOG_AGENT_EMBEDDED_PATH/bin/clang-11 $DATADOG_AGENT_EMBEDDED_PATH/bin/clang
     - $S3_CP_CMD $DATADOG_AGENT_EMBEDDED_PATH/bin/clang $S3_PERMANENT_ARTIFACTS_URI/clang-11.0.1.${ARCH}
     - $S3_CP_CMD $DATADOG_AGENT_EMBEDDED_PATH/bin/llc $S3_PERMANENT_ARTIFACTS_URI/llc-11.0.1.${ARCH}
+    - $S3_CP_CMD $SRC_PATH/pkg/ebpf/c/stdarg.h $S3_PERMANENT_ARTIFACTS_URI/stdarg.h
   timeout: 2h 00m
   artifacts:
     expire_in: 2 weeks
